# Capstone-project-RSschool

./: .gitignore  README.md  noxfile.py  pyproject.toml  setup.cfg
.github/workflows/: tests.yml
Docker/: Dockerfile  pyproject.toml
config/: estimate_params.json  tuning_params.json
reports/: report.md
src/forest_ml/: data.py  eda.py  model_selection.py  pipeline.py  predict.py  train.py
src/forest_ml/app/: flask_app.py  predict_req.py  test_app.py
tests/: test_train.py
tests/test_data/: estimate_params.json  pytest_test.csv  pytest_train.csv
