[tool.poetry]
name = "forest_ml"
version = "0.1.0"
description = "9 homework for RS School Machine LEarning course"
authors = ["dimakarpuk22 <dimakarpuk22@gmail.com>"]

[tool.black]
line-length = 80

[tool.poetry.scripts]
train = "forest_ml.train:train"

[tool.poetry.dependencies]
python = "^3.9"
sklearn = "^0.0"
scikit-learn = "^1.0.2"
pandas = "^1.4.2"
mlflow = "^1.25.1"
click = "^8.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.942"
black = "^22.3.0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
