[tool.poetry]
name = "forest_ml"
version = "0.1.0"
description = "9 homework for RS School Machine LEarning course"
authors = ["dimakarpuk22 <dimakarpuk22@gmail.com>"]

[tool.poetry.group.dev.dependencies]
nox = "^2022.8.7"

[tool.black]
line-length = 80

[tool.poetry.scripts]
train = "forest_ml.train:train"
predict = "forest_ml.predict:predict"
eda = "forest_ml.eda:eda"
test_app = "forest_ml.app.predict_req:predict_req"

[tool.poetry.dependencies]
python = "^3.9"
sklearn = "^0.0"
scikit-learn = "^1.0.2"
pandas = "^1.4.2"
mlflow = "^1.25.1"
click = "^8.1.2"
pandas-profiling = "^3.2.0"
Flask = "^2.2.2"
numpy = "^1.23.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.942"
black = "^22.3.0"
flake8 = "^4.0.1"
flake8-annotations = "^2.9.0"
flake8-black = "^0.3.3"
coverage = "^6.3.3"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.paths]
source = ["src"]

[tool.coverage.run]
branch = true
source = ["forest_ml"]

[tool.coverage.report]
show_missing = true